--- a/style.css
+++ b/style.css
@@ -144,7 +144,7 @@ label #cancel {
 .point {
   margin-left: auto;
   position: absolute;
-  right: 20px;
+  right: 4%;
 }
 .point i {
   margin-left: 20px;
